tests/import/resolution_scope/negative_nested_scope_validation/base.ott
grammar
cast :: 'Cast_' ::=
  | 'c' :: :: c

tm :: 'Tm_' ::=
  | cast :: :: cast_tm
